styling and spacing fixes

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .spacer {
-  height: 250px;
+  height: 225px;
 }
 @media screen and (min-width: 768px) {
   .spacer {
@@ -46,7 +46,18 @@ h1 {
   display: block;
   font-weight: 400;
   text-align: center;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  text-shadow: 0 0 10px rgba(255, 255, 255, 1);
+  margin-bottom: 0;
+
+}
+
+h2 {
+  display: block;
+  font-weight: 400;
+  text-align: center;
+  font-size: 1.1rem;
+  text-shadow: 0 0 10px rgba(255, 255, 255, 1);
+  margin-top: 0;
 }
 
 .btn {
@@ -67,10 +78,6 @@ h1 {
   transform: scale(1.1);
 }
 
-.btn:hover {
-    opacity: 0.9;
-}
-
 .btn:focus {
     outline: none;
 }
@@ -86,5 +93,5 @@ footer {
   text-align: center;
   color: rgb(68 68 68);
   font-weight: 700;
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  text-shadow: 0 0 10px rgba(255, 255, 255, 1);
 }
